--- a/COMP123-S2017-Lesson11/COMP123-S2017-Lesson11.csproj
+++ b/COMP123-S2017-Lesson11/COMP123-S2017-Lesson11.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="CardLIst.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Face.cs" />
     <Compile Include="Program.cs" />
